finalizando responsividade e integração

--- a/obrigado.html
+++ b/obrigado.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orações</title>
-    <link rel="shortcut icon" href="Teens.png" type="image/x-png">
-    <link rel="stylesheet" href="obrigado.css" />
+    <link rel="shortcut icon" href="img/Teens.png" type="image/x-png">
+    <link rel="stylesheet" href="Estilos/obrigado.css" />
   </head>
   <body>
     <div>
