--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estilos/style.css">
+    <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="stylesheet" href="Estilos/media-query.css">
     <title>Orações</title>
 </head>
@@ -38,7 +39,11 @@
                     </div>
 
                     <!-- Enviar -->
-                    <input type="hidden" name="_next" value="http://beabeltech.github.io/obrigado.html"/>
+                    <input
+                    type="hidden" 
+                    name="_next" 
+                    value="http://beabeltech.github.io/obrigado.html"
+                    />
                     <button type="submit" id="enviar">Enviar</button>
                 </form>
             </div>
