--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <input
                     type="hidden" 
                     name="_next" 
-                    value="http://beabeltech.github.io/obrigado.html"
+                    value="https://beabeltech.github.io/teste-teens/obrigado.html"
                     />
                     <button type="submit" id="enviar">Enviar</button>
                 </form>
